--- a/css/styles.css
+++ b/css/styles.css
@@ -12,31 +12,30 @@ body {
   color: var(--color_text);
   font-size: 14px;
 line-height: 1.7;
-
-
-
+margin: 0;
 letter-spacing: 0.03em;
 }
 ul{
   list-style: none;
 }
 
-
  /* header */
+ .container{
+   display: flex;  
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  /* height: 80px;  */
+  background-color: tomato;
+
+}
 .navi {
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
   font-family: Roboto;
   color: var(--color_black);
   
-}
-.comamda {
-  background-color: #f5f4fa;
-}
-.adr {
   
-  font-family: Raleway;
-  color: var(--color_blu);
 }
 
 .logo-link{
@@ -49,15 +48,24 @@ line-height: 31px;
 letter-spacing: 0.03em;
 
 }
+.adr {
+  font-family: Raleway;
+  color: var(--color_blu);
+}
 .logo {
   background-color: var(--color_white);
   color: var(--color_black);
   }
-
+.nav-links .li{
+  border-radius: 2px;
+  color: blue;
+}
  .nav-links .links{ 
+  
+  
   text-decoration: none;
   color: var(--color_black);
-  
+  display: flex;
    font-weight: 500;
   font-size: 14px;
   line-height: 16px; 
@@ -110,6 +118,10 @@ background-color: var(--color_blu);
 color: var(--color_white);
 width: 200px;
 height: 50px;
+}
+
+.comamda {
+  background-color: #f5f4fa;
 }
 
 footer {
