--- a/css/styles.css
+++ b/css/styles.css
@@ -11,65 +11,102 @@ body {
   font-family: Roboto;
   color: var(--color_text);
   font-size: 14px;
-line-height: 1.7;
-margin: 0;
-letter-spacing: 0.03em;
+  line-height: 1.7;
+  margin: 0;
+  letter-spacing: 0.03em;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 ul{
   list-style: none;
 }
-
- /* header */
- .container{
-   display: flex;  
+.container{
+  display: flex;
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
-  /* height: 80px;  */
-  background-color: tomato;
-
+  height: 80px;
+  align-items: center;
 }
+ /* header */
 .navi {
-  /* background-color: #ffffff; */
+   background-color: #ffffff; 
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
   font-family: Roboto;
   color: var(--color_black);
+  display: block;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  height: 80px;'
+  align-items: center;
+  padding-left: 4px;
   
-  
+   
+}
+.nav-links{
+  display: flex;
+  align-items: center;
+  margin-left: 0px;
+  padding-left: 0px;
+    
 }
 
+
+  
+ 
+
+
 .logo-link{
+  display: block;
+  padding-top: 24px; 
+  padding-bottom: 24px;
 text-decoration: none; 
 color: var(--color_black);
 font-family: Raleway; 
 font-weight: 700;
 font-size: 26px;
-line-height: 31px; 
-letter-spacing: 0.03em;
+line-height: 31px;
+display: flex;
+align-items: center;
+margin-right: 86px;
+
 
 }
 .adr {
   font-family: Raleway;
   color: var(--color_blu);
+  align-items: center;
 }
 .logo {
   background-color: var(--color_white);
   color: var(--color_black);
+  
   }
-.nav-links .li{
-  border-radius: 2px;
-  color: blue;
-}
+
  .nav-links .links{ 
-  
-  
+   display: block;
+   padding-top: 32px; 
+   padding-bottom: 32px;
   text-decoration: none;
   color: var(--color_black);
   display: flex;
-   font-weight: 500;
+  font-weight: 500;
   font-size: 14px;
-  line-height: 16px; 
+  line-height: 1.2;
+  
+  
+}
+  
+  .nav-links .item:not(:last-child){
+    margin-right: 50px;
+  
   } 
+  .ite{
+    margin-left: 380px;
+    margin-right: 50px;
+  }
 
   
 
@@ -102,8 +139,43 @@ h1,h2,h3,h4,h5,h6 {
   color: var(--color_black);
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
-}
+  line-height: 1.2;
+} 
+  .buti{
+    display: block;
+    display: flex;
+    align-items: center;
+    
+    width: 200px;
+    height: 50px;
+    color: var(--color_white);
+
+background: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+padding-left: 32px;
+padding-right: 32px;
+margin-top: 0px;
+margin-bottom: 0;
+text-align: center;
+/* text-decoration: none; */
+  }
+ 
+
+
+.tit{
+    display: block;
+    display: flex;
+    font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  align-items: center;
+  margin-top: 0;
+  margin-bottom: 0;
+   }
+   .about{
+     text-align: center;
+   }
 .garant{
   font-weight: 700;
 font-size: 36px;
@@ -113,11 +185,13 @@ text-align: center;
 
 
 .button {
+  display: block;
 text-decoration: none;
 background-color: var(--color_blu);
 color: var(--color_white);
-width: 200px;
-height: 50px;
+
+
+
 }
 
 .comamda {
