--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 :root {
   --color_blu: #2196f3;
   --color_white: #ffffff;
@@ -19,6 +28,12 @@ body {
 }
 ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
+}
+li {
+  margin: 0;
+  padding: 0;
 }
 .container {
   display: flex;
@@ -60,7 +75,7 @@ ul {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.2;
   display: flex;
   align-items: center;
   margin-right: 86px;
@@ -129,9 +144,8 @@ h6 {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.2;
-  /* margin-top: 0;
-  margin-bottom: 0;
-  margin-bottom: 50px; */
+  margin: 0;
+  padding: 0;
 }
 
 /* text-decoration: none; */
@@ -141,13 +155,22 @@ h6 {
   text-align: center;
   margin-top: 94px;
 }
+.aboute {
+  display: block;
+  text-align: center;
+  margin-top: 0;
+  width: 1600px;
+  height: 600px;
+  background-image: url(../img/head.png);
+}
 .tit {
   display: block;
   font-size: 44px;
   line-height: 1.36;
-
+  color: var(--color_white);
   margin-top: 0;
   margin-bottom: 0;
+  padding-top: 200px;
 }
 .buti {
   text-align: center;
@@ -160,16 +183,18 @@ h6 {
   width: 200px;
   height: 50px;
   align-items: center;
-
+  text-align: center;
   color: var(--color_white);
 
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  padding-left: 80px;
+  padding-left: 32px;
+  padding-right: 32px;
 
   margin-top: 0px;
   margin-bottom: 0;
+  margin-top: 56px;
 }
 
 /* line-blok */
@@ -220,10 +245,15 @@ h6 {
   margin-right: 30px;
 }
 .button {
-  display: block;
+  display: inline-block;
   text-decoration: none;
   background-color: var(--color_blu);
   color: var(--color_white);
+  width: 200px;
+  height: 50px;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
 }
 /* 
 .comamda {
@@ -237,12 +267,16 @@ footer {
   color: var(--color_white);
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
+  width: 1600px;
+  text-align: center;
 }
 .foot {
   padding-top: 50px;
   display: inline-block;
   display: flex;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .adresa {
 }
