--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,15 @@ html {
 *::after {
   box-sizing: inherit;
 }
+li {
+  list-style: none;
+}
 
+}
+.list {
+  margin: 0;
+  padding: 0;
+}
 :root {
   --color_blu: #2196f3;
   --color_white: #ffffff;
@@ -20,313 +28,190 @@ body {
   font-family: Roboto;
   color: var(--color_text);
   font-size: 14px;
-  line-height: 1.7;
+  line-height: 1.71;
   margin: 0;
+  padding: 0;
   letter-spacing: 0.03em;
   padding-left: 4px;
   padding-right: 4px;
 }
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-li {
-  margin: 0;
-  padding: 0;
-}
-.container {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
-  height: 80px;
-  align-items: center;
-}
-/* header */
-.navi {
-  background-color: #ffffff;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
-  font-family: Roboto;
-  color: var(--color_black);
-  display: block;
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
-  height: 80px;
-  align-items: center;
-  padding-left: 4px;
-}
-.nav-links {
-  display: flex;
-  align-items: center;
-  margin-left: 0px;
-  padding-left: 0px;
-}
-
+/* шапка */
 .logo-link {
-  display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  text-decoration: none;
   font-family: Raleway;
+  font-style: normal;
   color: var(--color_black);
-  font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.2;
-  display: flex;
-  align-items: center;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-decoration: none;
   margin-right: 86px;
 }
-.adr {
-  font-family: Raleway;
+
+.web {
   color: var(--color_blu);
-  align-items: center;
-}
-.logo {
-  background-color: var(--color_white);
-  color: var(--color_black);
 }
 
 .nav-links .links {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  text-decoration: none;
-  color: var(--color_black);
-  display: flex;
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.2;
-}
-
-.nav-links .item:not(:last-child) {
-  margin-right: 50px;
-}
-.ite {
-  margin-left: 380px;
-  margin-right: 50px;
-}
-
-.nav-links .links:hover,
-.nav-links .links:focus {
-  color: var(--color_blu);
-}
-
-.nav-links .current {
-  color: var(--color_blu);
-}
-
-.nav-links .emeil {
-  color: var(--color_text);
-}
-.nav-links .phon {
-  color: var(--color_text);
-}
-
-.list {
-  list-style: none;
-}
-
-.nav-links .current:focus {
-  background-color: var(--color_blu);
-}
-/* text */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
   color: var(--color_black);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.2;
-  margin: 0;
-  padding: 0;
+
+  /* margin-right: 50px; */
 }
 
-/* text-decoration: none; */
+.item {
+  text-decoration: none;
+}
 
-.about {
-  display: block;
-  text-align: center;
-  margin-top: 94px;
+.links:hover,
+.links:focus {
+  color: var(--color_blu);
 }
-.aboute {
-  display: block;
-  text-align: center;
-  margin-top: 0;
-  width: 1600px;
-  height: 600px;
-  background-image: url(../img/head.png);
-}
-.tit {
-  display: block;
-  font-size: 44px;
-  line-height: 1.36;
-  color: var(--color_white);
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 200px;
-}
-.buti {
-  text-align: center;
+
+.head {
   display: inline-block;
-  display: inline-flex;
-  text-align: center;
-  font-size: 16px;
-  line-height: 1.9;
-
-  width: 200px;
-  height: 50px;
+  display: flex;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--color_white);
+  padding-left: 15px;
+  padding-right: 15px;
+  min-height: 80px;
+}
+.nav {
+  display: block;
+  display: flex;
   align-items: center;
-  text-align: center;
-  color: var(--color_white);
+}
 
+.nav-links {
+  display: block;
+  display: flex;
+  align-items: center;
+}
+.list {
+  display: block;
+  display: flex;
+  flex: end;
+  margin-left: auto;
+}
+.nav-links .item:not(:last-child) {
+  margin-right: 50px;}
+  .nav-links .emeil {
+    color: var(--color_text)
+  }
+  .nav-links .phon{
+    color: var(--color_text)
+  }
+
+ .nav-links .current{
+    color: var(--color_blu);
+  }
+  /* 1600 */
+.container {
+  display: block;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding:0;
+  margin-top:0;
+  padding-top: 94px;
+  padding-bottom: 94px
+  background-color: #E5E5E5;
+}
+
+  .abo{
+    background-image: url(../img/Head.png);
+    width: 1600px;
+    height: 600px; 
+    margin-top: 0;
+  }
+
+.tit{
+  display: block;
+  
+  color: var(--color_white);
+  font-weight: 900;
+font-size: 44px;
+line-height: 1.36;
+letter-spacing: 0.06em;
+text-align: center;
+padding-top: 200px;
+margin-top: 0;
+margin-bottom: 0;
+}
+.buti{
+   font-size: 16px;
+  line-height: 1.9;
+  color: var(--color_white);
   background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
   padding-left: 32px;
   padding-right: 32px;
-
-  margin-top: 0px;
   margin-bottom: 0;
-  margin-top: 56px;
-}
-
-/* line-blok */
-.line-blok {
-  display: inline-block;
-  display: inline-flex;
-
-  display: flex;
+  margin-top: 56px; 
+  margin-right: auto; 
   margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
-
-  margin-top: 50px;
-}
-.garant {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-}
-
-.doit {
-  width: 278px;
-}
-.line-blok .doit:not(:last-child) {
-  display: block;
-  margin-right: 30px;
-}
-.work {
-  display: block;
-  display: flex;
-  text-align: center;
-}
-.line-blok .doit-now {
-  width: 380px;
-  height: 294px;
-  margin-right: 30px;
-  text-align: center;
-}
-.line-blok .doit-now:last-child {
-  margin-right: 0;
-}
-.line-blok .client {
-  display: block;
-  display: flex;
-  width: 175px;
-  height: 90px;
-  margin-right: 30px;
-}
-.button {
-  display: inline-block;
-  text-decoration: none;
-  background-color: var(--color_blu);
-  color: var(--color_white);
   width: 200px;
-  height: 50px;
+  height: 50px;  
+} 
+/* Мы гарантируем */
+
+.doit .title {
+  font-weight: 700;
+   font-size: 14px;
+  
+  text-align: center;
   margin-top: 0;
   margin-bottom: 0;
-  text-align: center;
-}
-/* 
-.comamda {
- 
-} */
-footer {
-  text-decoration: none;
+  color: var(--color_black);
+  text-align: left;
+  margin-top: 30px;
 
-  background-color: #2f303a;
-  font-family: Roboto;
-  color: var(--color_white);
-  margin-left: auto;
-  margin-right: auto;
-  width: 1600px;
-  text-align: center;
 }
-.foot {
-  padding-top: 50px;
-  display: inline-block;
-  display: flex;
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.adresa {
-}
-.nav-links .futer {
-  color: var(--color_white);
-}
+  .line-blok {
+    display: inline-block;
+  display: inline-flex;
+  flex-direction: row;
+ text-align: left;
+    
+  }
 
-.logo-lin {
-  text-decoration: none;
-  color: var(--color_white);
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 22px;
-  line-height: 26px;
-  letter-spacing: 0.03em;
-}
-.down {
-  color: var(--color_white);
-}
+  .doit {
+        margin-right: 30px;
+    
+  }
+    
+    
 
-.lists {
-  text-decoration: none;
-  color: var(--color_white);
-}
-/* portfolio */
-.port {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 36px;
-}
-.spisoc {
-  font-size: 16px;
-  line-height: 1.88;
-  display: block;
-}
-.tup {
-  display: block;
-  display: flex;
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
-}
-.name {
-  font-size: 16px;
-  line-height: 1.88;
-}
-
-.opus {
-  font-size: 18px;
-  line-height: 1.88px;
-  width: 380px;
-}
+  }
+  .doit:not(:last-child){
+    margin-right: 30px;
+  }
+  .pic{
+    align-items: center;
+     width: 270px;
+    height: 120px; 
+    background-color: #F5F4FA;;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    
+  }
+  /* Чем мы занимаемся */
+  .garant{
+    color: var(--color_black);
+    font-size: 36px;
+line-height: 1.16;
+margin-top: 0;
+margin-bottom: 0;
+padding-top: 94px;
+padding-bottom: 50px;
+  }
