--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,11 @@ html {
 li {
   list-style: none;
 }
-
-
+ul,
+p {
+  margin-bottom: 0;
+  margin-top: 0;
+}
 .list {
   margin: 0;
   padding: 0;
@@ -97,24 +100,24 @@ body {
 .list {
   display: block;
   display: flex;
-   flex: end; 
+  flex: end;
   margin-left: auto;
 }
 .nav-links .item:not(:last-child) {
-  margin-right: 50px;}
-  .nav-links .emeil {
-    color: var(--color_text)
-  }
-  .nav-links .phon{
-    color: var(--color_text)
-  }
+  margin-right: 50px;
+}
+.nav-links .emeil {
+  color: var(--color_text);
+}
+.nav-links .phon {
+  color: var(--color_text);
+}
 
- .nav-links .current{
-    color: var(--color_blu);
-  }
-  /* 1600 */
+.nav-links .current {
+  color: var(--color_blu);
+}
+/* 1600 */
 .container {
-  
   display: flex;
   flex-direction: row;
   text-align: center;
@@ -125,108 +128,201 @@ body {
   padding-top: 0;
   padding-left: 0;
   padding-right: 0;
-  margin-top:0;
+  margin-top: 0;
   margin-bottom: 0;
   padding-top: 94px;
-  padding-bottom: 94px
+  padding-bottom: 94px;
   /* background-color: #E5E5E5; */
-  border: 1px solid #ECECEC;
 }
-
-  .abo{
-    background-image: url(../img/Head.png);
-    width: 1600px;
-    height: 600px; 
-    margin-top: 0;
-    text-align: center;
-  }
-.abo .knop{
- 
+.box {
+  outline: 2px solid tomato;
+}
+.abo {
+  background-image: url(../img/Head.png);
+  width: 1600px;
+  height: 600px;
+  margin-top: 0;
+  text-align: center;
+}
+.abo .knop {
   display: flex;
   align-items: center;
-  
-  
 }
-.tit{
+.tit {
   display: block;
-  
+
   color: var(--color_white);
   font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-letter-spacing: 0.06em;
-text-align: center;
-padding-top: 200px;
-margin-top: 0;
-margin-bottom: 0;
-margin-bottom: 54px;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-align: center;
+  padding-top: 200px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-bottom: 54px;
 }
-.buti{
-   font-size: 16px;
+.buti {
+  font-size: 16px;
   line-height: 1.9;
   color: var(--color_white);
   background: #2196f3;
   padding-left: 32px;
   padding-right: 32px;
-  margin-bottom: 0; 
+  margin-bottom: 0;
   margin-top: 0;
-  margin-right: auto; 
+  margin-right: auto;
   margin-left: auto;
   width: 200px;
-  height: 50px;  
-} 
+  height: 50px;
+}
 /* Мы гарантируем */
 
-.doit .title {
+.title {
   font-weight: 700;
-   font-size: 14px;
-  
   text-align: center;
   margin-top: 0;
   margin-bottom: 0;
   color: var(--color_black);
-  text-align: left;
-  margin-top: 30px;
-
+  text-align: center;
 }
-  .line-blok {
-    display: inline-block;
+.line-blok {
+  display: inline-block;
   display: inline-flex;
   flex-direction: row;
- text-align: left;
-    
-  }
+  text-align: left;
+  padding-left: 0;
+  margin-top: 0;
+  margin-left: 0;
+}
 
-  .doit {
-        margin-right: 30px;
-    
-  }
-    
-    
+.doit-now {
+  margin-right: 30px;
+  margin-bottom: 0;
+}
 
-  }
-  .doit:not(:last-child){
-    margin-right: 30px;
-  }
-  .pic{
-    align-items: center;
-     width: 270px;
-    height: 120px; 
-    background-color: #F5F4FA;;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    
-  }
-  /* Чем мы занимаемся */
-  .garant{
-    color: var(--color_black);
-    font-size: 36px;
-line-height: 1.16;
-margin-top: 0;
-margin-bottom: 0;
-padding-top: 94px;
-padding-bottom: 50px;
-  }
-  .line-blok {
-    display: flex;
-  }
+.doit-now:last-child {
+  margin-right: 0px;
+}
+.pic {
+  align-items: center;
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+/* Чем мы занимаемся */
+.garant {
+  color: var(--color_black);
+  font-size: 36px;
+  line-height: 1.16;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 50px;
+}
+.line-blok {
+  /* display: flex; */
+}
+.titles {
+  font-weight: 700;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: var(--color_text);
+  text-align: center;
+}
+.social {
+  display: flex;
+  margin-right: 35px;
+}
+.nav-links .social:last-child {
+  margin-right: 0;
+}
+/* .col {
+  background-color: tomato;
+} */
+
+.client {
+  align-items: center;
+  width: 170px;
+  height: 90px;
+  background-color: #f5f4fa;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin-right: 30px;
+  /* margin-left: auto;
+  margin-right: auto; */
+}
+.client:last-child {
+  margin-right: 0;
+}
+.foot {
+  background-color: var(--color_black);
+  color: var(--color_white);
+}
+
+.stud {
+  color: var(--color_white);
+}
+.lists {
+  color: rgba(255, 255, 255, 0.6);
+}
+.stu {
+  margin: 0;
+  background-color: var(--color_black);
+  color: var(--color_white);
+}
+.card {
+  background: #ffffff;
+  height: 422px;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border: 4px solid tomato;
+}
+.containe {
+  display: block;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0;
+  padding-left: 0;
+  padding-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 94px;
+  padding-bottom: 94px;
+.port {
+  color: var(--color_black);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-bottom: 4px;
+  padding-left: 24px;
+  width: 370px;
+}
+.name {
+  font-size: 16px;
+  line-height: 1.88;
+  color: #757575;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-bottom: 4px;
+  padding-left: 24px;
+  width: 370px;
+}
