--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,8 @@ body {
   margin-bottom: 0;
   padding-top: 94px;
   padding-bottom: 94px;
+  padding-left: 15px;
+  padding-right: 15px;
   /* background-color: #E5E5E5; */
 }
 .box {
@@ -162,6 +164,23 @@ body {
   margin-bottom: 0;
   margin-bottom: 54px;
 }
+.txt {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  width: 270px;
+  margin-right: 30px;
+  color: #757575;
+}
+.txtt {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  width: 270px;
+
+  color: #757575;
+}
+
 .buti {
   font-size: 16px;
   line-height: 1.9;
@@ -179,12 +198,49 @@ body {
 /* Мы гарантируем */
 
 .title {
+  display: block;
+  display: flex;
+  width: 270;
   font-weight: 700;
-  text-align: center;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-align: left;
   margin-top: 0;
   margin-bottom: 0;
   color: var(--color_black);
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
+.transp {
+  display: flex;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+  border-radius: 0px 0px 4px 4px;
+  font-size: 14px;
+  line-height: 1.14;
   text-align: center;
+  align-items: center;
+  margin-bottom: 0;
+  letter-spacing: 0.03em;
+  margin-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: -9px;
+  color: #ffffff;
+}
+.centr {
+  display: flex;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: var(--color_black);
+  padding-top: 30px;
+  padding-bottom: 10px;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .line-blok {
   display: inline-block;
@@ -235,7 +291,6 @@ body {
   margin-top: 10px;
   margin-bottom: 10px;
   color: var(--color_text);
-  text-align: center;
 }
 .social {
   display: flex;
@@ -284,16 +339,16 @@ body {
 .card {
   background: #ffffff;
   height: 422px;
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 1px 3px rgba(0, 0, 0, 0.12);
-  border: 4px solid tomato;
+  /* box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12); */
+  border: 1px solid tomato;
 }
 .containe {
   display: flex;
   flex-direction: row;
   text-align: center;
   align-items: center;
-  width: 1200px;
+  width: 1230px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 0;
@@ -303,6 +358,7 @@ body {
   margin-bottom: 0;
   padding-top: 50px;
   padding-bottom: 94px;
+
   /* background-color: #E5E5E5; */
 }
 .port {
