--- a/css/styles.css
+++ b/css/styles.css
@@ -381,8 +381,9 @@ body {
   letter-spacing: 0.03em;
   margin-top: 0;
   margin-bottom: 0;
-  margin-bottom: 4px;
+  margin-bottom: 50px;
   padding-left: 24px;
+
   width: 370px;
 }
 .line-blo {
@@ -398,13 +399,19 @@ body {
   display: block;
   text-align: center;
 
-  padding-top: 94px;
+  margin-top: 94px;
 }
-.button {
+.knopk {
+  height: 38px;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.63;
-
+  line-height: 1.62;
+  background: #f5f4fa;
+  border-radius: 4px;
   text-align: center;
   letter-spacing: 0.03em;
+  padding-left: 22px;
+  padding-right: 22px;
+  margin-right: 8px;
+  color: #212121;
 }
