--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,12 @@ html {
 }
 li {
   list-style: none;
+  text-decoration: none;
 }
-ul,
+
 p {
-  margin-bottom: 0;
-  margin-top: 0;
+  margin: 0;
+  padding: 0;
 }
 .list {
   margin: 0;
@@ -78,6 +79,8 @@ body {
 .head {
   display: inline-block;
   display: flex;
+  /* width: 100%; */
+  /* min-*/
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -91,7 +94,10 @@ body {
   display: flex;
   align-items: center;
 }
-
+.nav-lin {
+  display: flex;
+  justify-content: space-between;
+}
 .nav-links {
   display: block;
   display: flex;
@@ -120,8 +126,8 @@ body {
 .container {
   display: flex;
   flex-direction: row;
-  text-align: center;
-  align-items: center;
+  /* text-align: center;
+  align-items: center; */
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -141,7 +147,8 @@ body {
 }
 .abo {
   background-image: url(../img/Head.png);
-  width: 1600px;
+  width: 100%;
+  min-width: 1600px;
   height: 600px;
   margin-top: 0;
   text-align: center;
@@ -172,16 +179,12 @@ body {
   margin-right: 30px;
   color: #757575;
 }
-.txtt {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  width: 270px;
-
-  color: #757575;
+.doit-now:last-child .txt {
+  margin-right: 0;
 }
 
 .buti {
+  text-decoration: none;
   font-size: 16px;
   line-height: 1.9;
   color: var(--color_white);
@@ -205,7 +208,7 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-align: left;
+  justify-content: center;
   margin-top: 0;
   margin-bottom: 0;
   color: var(--color_black);
@@ -219,6 +222,7 @@ body {
   border-radius: 0px 0px 4px 4px;
   font-size: 14px;
   line-height: 1.14;
+  justify-content: center;
   text-align: center;
   align-items: center;
   margin-bottom: 0;
@@ -273,6 +277,7 @@ body {
 
 /* Чем мы занимаемся */
 .garant {
+  text-align: center;
   color: var(--color_black);
   font-size: 36px;
   line-height: 1.16;
@@ -280,9 +285,7 @@ body {
   margin-bottom: 0;
   padding-bottom: 50px;
 }
-.line-blok {
-  /* display: flex; */
-}
+
 .titles {
   font-weight: 700;
   text-align: center;
@@ -304,9 +307,6 @@ body {
   display: flex;
   padding-left: 40px;
 }
-/* .col {
-  background-color: tomato;
-} */
 
 .client {
   align-items: center;
@@ -325,15 +325,27 @@ body {
 .client:last-child {
   margin-right: 0;
 }
+footer {
+  background-color: var(--color_black);
+}
 .foot {
   display: flex;
-  flex-direction: row;
-  text-align: center;
-  align-items: centr;
-  background-color: var(--color_black);
+  /* width: 100%;
+  min- */
+  padding-bottom: 28px;
+  padding-top: 48px;
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+
   color: var(--color_white);
 }
-
+.one {
+  flex-grow: 1;
+}
+.two {
+  flex-grow: 2;
+}
 .stud {
   color: var(--color_white);
 }
@@ -341,9 +353,12 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 .stu {
-  margin: 0;
+  padding-top: 18px;
+  padding-bottom: 21px;
+  text-align: center;
   background-color: var(--color_black);
   color: var(--color_white);
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 .card {
   background: #ffffff;
@@ -357,7 +372,8 @@ body {
   flex-direction: row;
   text-align: center;
   align-items: center;
-  width: 1230px;
+  width: 1200px;
+
   margin-left: auto;
   margin-right: auto;
   padding-top: 0;
@@ -398,7 +414,7 @@ body {
 .line-blo {
   display: flex;
   flex-wrap: wrap;
-
+  justify-content: space-between;
   text-align: left;
   padding-left: 0;
   margin-top: 0;
@@ -423,4 +439,7 @@ body {
   padding-right: 22px;
   margin-right: 8px;
   color: #212121;
+}
+.line-blo:last-child .doit-now {
+  margin-right: 0;
 }
