--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ li {
 div{
   margin: 0;
 }
+img{
+  display: block;
+  margin: 0;
+}
 /* ul{
   margin: 0;
   padding: 0;
@@ -47,8 +51,8 @@ body {
   margin: 0;
   padding: 0;
   letter-spacing: 0.03em;
-  padding-left: 4px;
-  padding-right: 4px;
+  /* padding-left: 4px;
+  padding-right: 4px; */
 }
 /* шапка */
 .logo-link {
@@ -93,10 +97,10 @@ letter-spacing: 0.03em;
   margin: 0;
   padding: 0;
   margin-right: 50px;
+  padding-bottom: 32px;
+  padding-top: 32px;
 }
-/* .item:last-child{
-  margin-right: 0; */
-/* } */
+
 .nav-links .emeil {
   color: var(--color_text);
 }
@@ -125,7 +129,23 @@ letter-spacing: 0.03em;
   color: var(--color_blu);}
 .item {
   text-decoration: none;
+  position: relative;
   
+}
+
+.hey{
+  height: 100%;
+}
+.polosa::after{
+  display: block;
+  content: '';
+  width: 100%;
+  background: #2196F3;
+border-radius: 2px;
+  height: 5px;
+  position: absolute;
+  bottom: 0px;
+  left:0;
 }
 .itema{
  
@@ -158,6 +178,7 @@ letter-spacing: 0.03em;
   display: block;
   display: flex;
   align-items: center;
+ 
 }
 .list {
   display: block;
@@ -199,6 +220,8 @@ letter-spacing: 0.03em;
  }
 .bk {
   background: #f5f4fa;
+  margin-left: auto;
+  margin-right: auto;
 }
 .gero{
   position: relative;
@@ -269,19 +292,27 @@ line-height: 60px;
 }
 /* Мы гарантируем */
 
-  .fly{ 
+  .ryad{
+    display: inline-block;
     display: inline-flex;
-    align-items: center;
+    flex-direction: wrap;
+  }
+  .fly{ 
+    
+    display: inline-flex;
+    justify-content: flex-start;
     text-align: center;
     font-weight: 900;
     font-size: 16px;
     line-height: 30px;
+    width: 200px;
+    height: 50px;
    
     letter-spacing: 0.06em;
   color: var(--color_white);
   background: #2196f3;
   padding-left: 29px;
-  /* padding-right: 64px; */
+
   margin-bottom: 0;
   margin-top: 0;
   
@@ -289,25 +320,34 @@ line-height: 60px;
   padding-bottom: 10px;}
   
   .fly::after{
-  content: 'qw';
-  font-size: 24px;
-  line-height: 24px;
-
-  /* width:30; 
-  height: 30; */
-  color: transparent;
-  /* margin-left: 10px; */
+    display: block;
+  content: '';
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
   background-repeat: no-repeat;
   background-image: url(../img/fly.svg);
   background-size: contain;
   background-position: center;
-  padding-right:  28px;  
+  
 
 }
+/* .enter{
+ 
+  display: inline-flex;
+  width: 358px;
+height: 50px;
+border: 1px solid rgba(255, 255, 255, 0.3);
+align-items: center;
+text-align: center;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+margin-right: 12px;
+} */
 .title {
   
   /* display: flex; */
- 
+  width: 270px;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -317,15 +357,17 @@ line-height: 60px;
   margin-top: 0;
   margin-bottom: 0;
   color: var(--color_black);
-  margin-top: 30px;
-  margin-bottom: 10px;
-  margin-right: 30px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  /* margin-right: 30px; */
 }
+
 .no{
   margin-right: 0px;
   
 }
 .lhm{
+  margin: 0;
   margin-right: 0;
   font-size: 16px;
 line-height: 19px;
@@ -338,7 +380,7 @@ line-height: 19px;
   display: flex;
   position: absolute;
   left:0;
-  bottom:6px;
+  bottom: 0;
   height: 70px;
   width: 100%;
   background: rgba(47, 48, 58, 0.8);
@@ -362,6 +404,8 @@ line-height: 42px;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
+margin: 0;
+margin-bottom: 50px;
 }
 .centr {
   display: flex;
@@ -382,8 +426,10 @@ color: #212121;
 
   flex-direction: row;
   text-align: left;
-  padding-left: 0;
-  margin: 0;
+  padding-left: 0px;
+  margin-top:0;
+  margin-bottom: 0;
+  
   
 }
 
@@ -444,8 +490,8 @@ background-image: url('../img/Vector.svg');
   text-align: center;
   margin-top: 0;
   margin-bottom: 0;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   color: var(--color_text);
   
 }
@@ -537,6 +583,7 @@ background-image: url('../img/Vector.svg');
   cursor: pointer;
   border: 1px solid #2196F3;
 }
+/* futer */
 footer {
   background-color: var(--color_black);
 }
@@ -549,7 +596,7 @@ footer {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
-
+  align-items: baseline;
   color: var(--color_white);
 }
 .down {
@@ -557,12 +604,24 @@ footer {
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.03em;
-  padding-left: 40px;
+margin: 0;
+margin-bottom: 21px;
 }
+
+
 .one {
-  margin-right: 46px;
+  margin-right: 69px;
   justify-content: start;
 }
+.onece{
+  margin-right: 94px;
+  padding: 0;
+  
+}
+.marg{
+  margin-left: 0;
+margin-top: 0;
+margin-bottom: 0;}
 .left{
   text-align: left;
   text-transform: uppercase;
@@ -651,6 +710,7 @@ letter-spacing: 0.03em;
   text-align: left;
   padding-left: 0;
   margin-top: 0;
+  margin-bottom: 0;
   
 }
 .linse{
