--- a/css/styles.css
+++ b/css/styles.css
@@ -220,8 +220,26 @@ border-radius: 2px;
  }
 .bk {
   background: #f5f4fa;
-  margin-left: auto;
-  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+   /* width: 1200px; */
+ 
+  padding-top: 0;
+  padding-left: 0;
+  padding-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 94px;
+  padding-bottom: 94px;
+ 
+}
+.wi{width: 1200px;
+ margin-left: auto;
+  margin-right: auto; 
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .gero{
   position: relative;
@@ -268,8 +286,13 @@ line-height: 60px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   width: 270px;
-  margin-right: 30px;
   color: #757575;
+}
+.doit{
+  margin-right: 30px;
+}
+.doit:last-child{
+  margin-right: 0;
 }
 .doit-now:last-child .txt {
   margin-right: 0;
@@ -332,18 +355,25 @@ line-height: 60px;
   
 
 }
-/* .enter{
+.pos{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+input{
  
-  display: inline-flex;
+  display:flex;
   width: 358px;
 height: 50px;
 border: 1px solid rgba(255, 255, 255, 0.3);
 align-items: center;
 text-align: center;
+margin-top: 0;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 margin-right: 12px;
-} */
+background: #2F303A;
+}
 .title {
   
   /* display: flex; */
@@ -354,11 +384,11 @@ margin-right: 12px;
   letter-spacing: 0.03em;
   text-align: center;
  
-  margin-top: 0;
-  margin-bottom: 0;
+  /* margin-top: 0;
+  margin-bottom: 0; */
   color: var(--color_black);
-  padding-top: 30px;
-  padding-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 10px;
   /* margin-right: 30px; */
 }
 
@@ -367,7 +397,7 @@ margin-right: 12px;
   
 }
 .lhm{
-  margin: 0;
+  
   margin-right: 0;
   font-size: 16px;
 line-height: 19px;
@@ -488,10 +518,10 @@ background-image: url('../img/Vector.svg');
   font-size: 16px;
   line-height: 19px;
   text-align: center;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  /* margin-top: 0;
+  margin-bottom: 0; */
+  /* margin-top: 10px; */
+  margin-bottom: 10px;
   color: var(--color_text);
   
 }
@@ -606,6 +636,7 @@ line-height: 16px;
 letter-spacing: 0.03em;
 margin: 0;
 margin-bottom: 21px;
+
 }
 
 
@@ -629,6 +660,7 @@ margin-bottom: 0;}
 }
 
 .two {
+  display: flex;
 }
 .stud {
   color: var(--color_white);
@@ -738,11 +770,15 @@ line-height: 26px; */
   background-color: var(--color_blu);
   cursor: pointer;
 }
+.psp{
+  padding-top: 94px;
+  border-top: 1px solid #ECECEC;
+}
 .knopka {
   display: block;
   text-align: center;
-  padding-top: 94px;
-  border-top: 1px solid #ECECEC;
+  
+  
   
 }
 .knopk {
