--- a/css/styles.css
+++ b/css/styles.css
@@ -715,8 +715,8 @@ margin-bottom: 0;}
   padding-right: 0;
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 50px;
-  padding-bottom: 94px;
+  margin-top: 50px;
+  
   
   background-color: #ffffff;
 }
@@ -785,7 +785,7 @@ line-height: 26px; */
 }
 .psp{
   padding-top: 94px;
-  padding-bottom:50px;
+  padding-bottom:94px;
   border-top: 1px solid #ECECEC;
 }
 .knopka {
